--- a/big-screen/package.json
+++ b/big-screen/package.json
@@ -14,6 +14,7 @@
     "echarts": "^5.5.0",
     "echarts-wordcloud": "^2.1.0",
     "geojson-places": "^1.0.8",
+    "mapvgl": "^1.0.0-beta.194",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
