--- a/big-screen/src/lib/china_myanmar_projects.json
+++ b/big-screen/src/lib/china_myanmar_projects.json
@@ -24,7 +24,8 @@
     "location": "若开统辖的马代岛（Maday Island）",
     "lat": 19.36,
     "lng": 93.58,
-    "status": "港区填海与码头桩基施工进行中，一期预计2025年完工"
+    "status": "港区填海与码头桩基施工进行中，一期预计2025年完工",
+    "img": "/images/ruokaiport.jpg"
   },
   {
     "name": "耶瓦水电站",
@@ -61,5 +62,59 @@
     "lat": 16.75,
     "lng": 96.15,
     "status": "正在办理土地与基础设施规划批复，少量基础管线施工中；社会争议仍待化解"
+  },
+  {
+    "name": "中缅铁路",
+    "desc": "连接中国云南省昆明市至缅甸仰光的国际铁路，全长1920公里，是泛亚铁路西线重要路段，为一带一路倡议的关键基础设施。",
+    "sign_time": "2011年：初始协议签署；2018年10月22日：签署木姐—曼德勒段可行性研究备忘录；2022年7月22日：大理至保山段开通。",
+    "location": "中国云南省昆明市——缅甸仰光",
+    "lat": 23.00,
+    "lng": 98.50,
+    "status": "停工"
+  },
+  {
+    "name": "蒙育瓦铜矿项目",
+    "desc": "位于缅甸实皆省的铜矿项目，包括莱比塘等分矿，是亚洲最大湿法炼铜工程，设计年产能10万吨阴极铜。",
+    "sign_time": "2010年：项目启动；2012年3月：莱比塘铜矿奠基；2012年12月：成立调查委员会。",
+    "location": "缅甸西北部实皆省南部蒙育瓦县钦敦江边的萨林基乡",
+    "lat": 22.10,
+    "lng": 95.00,
+    "status": "停工"
+  },
+  {
+    "name": "皎漂深水港",
+    "desc": "位于缅甸若开邦皎漂经济特区的深水港，是第四大能源进口通道起点，旨在通过一带一路倡议提升印度洋区域物流能力。",
+    "sign_time": "2009年12月：签署合作备忘录；2015年12月30日：中标；2018年11月8日：签署框架协议；2020年1月18日：股东协议和特许协议文本交换。",
+    "location": "缅甸若开邦皎漂经济特区",
+    "lat": 21.45,
+    "lng": 93.55,
+    "status": "停工"
+  },
+  {
+    "name": "皎漂燃气电站",
+    "desc": "位于缅甸若开邦皎漂市的燃气电站，装机容量13.5万千瓦，由中缅合作开发，旨在支持当地能源供应。",
+    "sign_time": "2019年11月5日：购电协议签约；2022年3月20日：进入调试阶段。",
+    "location": "缅甸若开邦皎漂市",
+    "lat": 20.45,
+    "lng": 93.55,
+    "status": "投产"
+  },
+  {
+    "name": "瑞丽江水电站",
+    "desc": "位于缅甸掸邦瑞丽江的水电站项目，采用BOT模式运作，包括一级、二级和三级电站，总装机容量142万千瓦。",
+    "sign_time": "2006年：项目启动；2009年11月12日：签署二级项目开发权谅解备忘录。",
+    "location": "缅甸掸邦南坎县境内",
+    "lat": 24.00,
+    "lng": 97.80,
+    "status": "投产"
+  },
+  {
+    "name": "中缅油气管道",
+    "desc": "从缅甸皎漂港至中国云南的原油和天然气管道，设计为第四大能源进口通道，绕过马六甲海峡以保障能源安全。",
+    "sign_time": "2009年12月：签署权利与义务协议；2010年6月：开工建设；2013年5月30日：全线贯通。",
+    "location": "缅甸若开邦、马圭省、曼德勒省和掸邦，从云南瑞丽进入中国",
+    "lat": 19.45,
+    "lng": 93.55,
+    "status": "投产"
   }
 ] 
