--- a/big-screen/package.json
+++ b/big-screen/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@jiaminghi/data-view": "^2.10.0",
+    "axios": "^0.27.2",
     "coordtransform": "^2.1.2",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.11",
