--- a/big-screen/src/lib/china_myanmar_projects.json
+++ b/big-screen/src/lib/china_myanmar_projects.json
@@ -4,7 +4,7 @@
     "desc": "“一油一气”并行管道，自若开（Kyaukphyu）经缅甸中部至中国云南昆明，是“一带一路”中国‑缅甸经济走廊核心能源通道。",
     "sign_time": "2005年12月：CNPC与缅方达成天然气30年购气MoU；2008年12月：中方签署油管建设协议；2009年6月：天然气、原油管道合同签署。",
     "location": "若开岛（Ramree Island）",
-    "lat": 20.36,
+    "lat": 21.36,
     "lng": 93.58,
     "status": "天然气管线2013年10月投入运营，原油管线2017年6月投产，持续向中国输送能源"
   },
@@ -13,8 +13,8 @@
     "desc": "占地1 600 ha，由中缅政府发起的综合产业园区，含港口、工业区等，连通若开油气终端，是BRI缅甸段旗舰。",
     "sign_time": "2013年9月：SEZ构想首次提出；2014年5月26日：在内比都签署总体规划及招标管理协议。",
     "location": "若开镇, 若开省",
-    "lat": 18.41,
-    "lng": 93.55,
+    "lat": 19.41,
+    "lng": 94.55,
     "status": "仍在征地与基础设施开发中，重点推进工业园区与配套管廊建设"
   },
   {
@@ -22,7 +22,7 @@
     "desc": "SEZ下属深水港项目，由中信集团（70%）与缅方（30%）合资建设，可停靠万吨级货轮，缩短中国经海上进口中东原油路线。",
     "sign_time": "2014年1月13日：成立管理委员会；2015年12月30日：中信联合体中标；2018年11月8日：签署框架协议。",
     "location": "若开统辖的马代岛（Maday Island）",
-    "lat": 19.36,
+    "lat": 18.36,
     "lng": 93.58,
     "status": "港区填海与码头桩基施工进行中，一期预计2025年完工",
     "img": "/images/ruokaiport.jpg"
@@ -33,7 +33,7 @@
     "sign_time": "2001年末：双方签署MoU；2005年9月2日：CITIC下属企业与缅方签正式合同；",
     "location": "曼德勒地区耶瓦镇",
     "lat": 21.99,
-    "lng": 96.12,
+    "lng": 97.12,
     "status": "四台机组均已于2010–2011年间投运，全面商业运行中"
   },
   {
@@ -50,8 +50,8 @@
     "desc": "分布于掸邦西部施威河（Shweli River）上的I/II/III级梯级电站，总装机≈1 420 MW，主体由云南联合电力公司（YUPD）按BOT模式建设。",
     "sign_time": "2004年2月：Shweli I勘测与前期；2006年8月：BOT协议签署。",
     "location": "掸邦南部南加木至南玛段",
-    "lat": 23.96,
-    "lng": 97.93,
+    "lat": 22.96,
+    "lng": 95.93,
     "status": "I级2009年竣工投运，II/III级相继完工，整体并网发电中"
   },
   {
@@ -65,7 +65,7 @@
   },
   {
     "name": "中缅铁路",
-    "desc": "连接中国云南省昆明市至缅甸仰光的国际铁路，全长1920公里，是泛亚铁路西线重要路段，为一带一路倡议的关键基础设施。",
+    "desc": "<img src=\"/images/china_myanmar_railway.jpg\" alt=\"中缅铁路示意图\" style=\"width:100%;margin-bottom:10px;border-radius:8px;\"><b>1. 项目概况与战略意义</b><br>中缅铁路（China–Myanmar Railway，CMR）是“一带一路”与中缅经济走廊（CMEC）的旗舰基础设施，规划连接中国云南省昆明，经瑞丽—木姐（Muse）、曼德勒（Mandalay），最终抵达若开邦皎漂（Kyaukphyu）印度洋深水港，全长逾1,000 公里。该线路将为中国提供绕越马六甲海峡的陆海联运通道，提升能源和贸易安全，深化区域互联互通。<br><br><b>2. 路线与分期建设</b><ul><li><b>第一阶段（中方段）：</b>昆明至瑞丽（Dali–Ruili段）已于2022年开通至保山，并计划2027年前完成至瑞丽，具备接入缅甸网络的条件。</li><li><b>第二阶段（缅甸段）：</b>缅方段分为两部分：<ul><li><b>木姐（Muse）—曼德勒（Mandalay）段</b>，长约401 公里，预计于2025年动工，前期仍在进行深入的地质与可行性调查；</li><li><b>曼德勒—皎漂（Kyaukphyu）段</b>，尚未确立开工时间表，同样需完成环境与社会影响评估（EIA/SIA）和线路勘测。</li></ul></li></ul><br><b>3. 进度与最新动态</b><ul><li>2025年6月，中缅两国领导人在北京会晤，强调加快CMEC框架下基础设施互联互通，明确推动中缅铁路“加速落地”。</li><li>缅甸交通部官员近日表示，Muse—Mandalay段测量工作已接近尾声，预计年内完成全部勘测报告，正式破土将在2025年内启动；曼—皎段尚待缅甸国内审批及跨国协调。</li></ul><br><b>4. 投资主体与融资</b><ul><li><b>主导方：</b>中方由中国铁路二院等央企组成的项目组参与，可研与工程设计；缅方由国家铁路局（Myanma Railways）配合。</li><li><b>资金来源：</b>项目总投资预计在150–200亿美元之间，中方或通过政府间贷款与商业银行融资相结合的方式铺开；缅方承担配套道路、站场及地方配合费用。</li></ul><br><b>5. 主要挑战与风险</b><ul><li><b>安全形势：</b>自2021年缅甸政变后，若开邦及掸邦局部地区武装冲突频发，可能对施工安全与供应链物流造成干扰。</li><li><b>环境与社会影响：</b>沿线山区与湿地生态脆弱，本地社区担忧生计转型与生态破坏，需严格落实EIA/SIA公开及补偿机制。</li><li><b>融资与审批：</b>缅甸国内政治经济不确定性增加，导致跨国贷款审批节奏有所放缓，需持续对接多边开发机构与中资银团。</li></ul><br><b>6. 未来展望</b><ul><li><b>2025–2026年：</b>完成Muse—Mandalay段施工启动与首批工程包招标；</li><li><b>2027–2029年：</b>实现中缅跨境通道打通，先行投入货运及联运；</li><li><b>2030年及以后：</b>全线投入运营，将昆明—皎漂陆海联运时间缩短至3 天内，显著提升区域贸易与能源安全。</li></ul>",
     "sign_time": "2011年：初始协议签署；2018年10月22日：签署木姐—曼德勒段可行性研究备忘录；2022年7月22日：大理至保山段开通。",
     "location": "中国云南省昆明市——缅甸仰光",
     "lat": 23.00,
@@ -83,11 +83,11 @@
   },
   {
     "name": "皎漂深水港",
-    "desc": "位于缅甸若开邦皎漂经济特区的深水港，是第四大能源进口通道起点，旨在通过一带一路倡议提升印度洋区域物流能力。",
+    "desc": "<img src=\"/images/Kyaukpyu_digital_globe.jpg\" alt=\"皎漂港卫星图\" style=\"width:100%;margin-bottom:10px;border-radius:8px;\"><b>1. 概况与地理位置</b><br>皎漂港（Kyaukpyu Port）位于缅甸若开邦西南部，濒临孟加拉湾，是皎漂经济特区（Kyaukpyu SEZ）和中缅经济走廊（CMEC）的海上枢纽之一。该港旨在为中国云南省提供一条绕过马六甲海峡，直达印度洋的海陆联运通道，大大缩短沿海航线的时间和成本。<br><br><b>2. 基础设施与规划</b><ul><li><b>深水码头：</b>规划建设10个泊位，首期设计年集装箱吞吐量约490万标准箱（TEU），可扩展至700万TEU；散货年通过量预计达780万吨。</li><li><b>配套设施：</b>包括道路、高速铁路连接昆明方向的联运通道，以及油气管道项目（日输油管线和输气管线）的落脚点。</li><li><b>环境与社会影响评估（EIA/SIA）：</b>已进入审查阶段，重点关注当地渔业、生计和生态环境影响。</li></ul><br><b>3. 投资与建设进度</b><ul><li><b>主导方：</b>由中国中信集团（CITIC）与缅甸政府合资成立的“中信缅甸港口投资有限公司”负责建设与运营。</li><li><b>近期会议：</b>2025年3月，中信高层与缅甸军政府官员在内比都召开协调会，商讨加速项目落实的先决条件；同月，军政府继续推进该港口工程，即便若开邦部分区域仍处于亚拉干军（Arakan Army）武装冲突中。</li><li><b>资金规模：</b>整体投资预估约73亿美元，分阶段实施，首期工程已于2024年初重启谈判并签署加速协议。</li></ul><br><b>4. 战略意义</b><ul><li><b>能源安全：</b>皎漂港与管道项目可将中东、非洲等地区的石油天然气，经过缅甸直接输往中国西南，为中国提供替代马六甲海峡的能源安全通道。</li><li><b>区域联动：</b>作为“一带一路”倡议和中缅经济走廊的重要节点，皎漂港将促进缅甸若开邦的经济发展，带动沿线基础设施和产业集聚。</li></ul><br><b>5. 挑战与风险</b><ul><li><b>安全风险：</b>若开邦的武装冲突尚未完全平息，局部地区仍有安全隐患，可能影响施工进度及运营安全。</li><li><b>社会影响：</b>当地渔业和传统生计面临冲击，当地社区呼吁提供再就业和技能培训，以缓解因港口建设带来的生计转型压力。</li><li><b>环境风险：</b>深水港和联运管道建设可能对沿海生态系统造成扰动，EIA/SIA结果仍需公开透明，确保环境与社会可持续发展。</li></ul><br><b>6. 未来展望</b><ul><li><b>项目推进：</b>在中缅双方的持续协调下，预计2025–2026年进入主航道疏浚和首批泊位建设阶段；随后逐步投产集装箱和散货业务。</li><li><b>区域影响：</b>皎漂港投产后，有望成为缅甸西部最重要的国际港口，带动若开邦基础设施升级、物流产业链完善，并进一步稳固中缅经济合作的战略纽带。</li></ul>",
     "sign_time": "2009年12月：签署合作备忘录；2015年12月30日：中标；2018年11月8日：签署框架协议；2020年1月18日：股东协议和特许协议文本交换。",
     "location": "缅甸若开邦皎漂经济特区",
-    "lat": 21.45,
-    "lng": 93.55,
+    "lat": 19.36,
+    "lng": 93.58,
     "status": "停工"
   },
   {
@@ -113,7 +113,7 @@
     "desc": "从缅甸皎漂港至中国云南的原油和天然气管道，设计为第四大能源进口通道，绕过马六甲海峡以保障能源安全。",
     "sign_time": "2009年12月：签署权利与义务协议；2010年6月：开工建设；2013年5月30日：全线贯通。",
     "location": "缅甸若开邦、马圭省、曼德勒省和掸邦，从云南瑞丽进入中国",
-    "lat": 19.45,
+    "lat": 20.45,
     "lng": 93.55,
     "status": "投产"
   }
