--- a/big-screen/src/lib/china_myanmar_projects.json
+++ b/big-screen/src/lib/china_myanmar_projects.json
@@ -55,12 +55,12 @@
     "status": "I级2009年竣工投运，II/III级相继完工，整体并网发电中"
   },
   {
-    "name": "新仰光城建设",
-    "desc": "位于仰光西岸30 000英亩新区，由仰光区政府与中国交建（CCCC）1.5亿美元PPP开发，含市政配套与住宅。因透明度及土地分配争议而饱受批评。",
+    "name": "缅甸仰光新城开发项目",
+    "desc": "缅甸仰光省政府于2018年3月31日宣布成立仰光新城开发公司，通过建设仰光新城提振当地经济。仰光新城开发公司为仰光省政府百分之百所有，中国交建将主要基于公私合作模式运营，由董事会成员管理。拟建区域占地4745公顷，位于Hlaingthaya - Twante高速公路与Seikkyi Kanaungto镇区之间。",
     "sign_time": "2018年3月1日：缅方成立开发公司；2018年4月：与CCCC签署1.5亿美元框架协议。",
     "location": "仰光西岸（Yangon Region）",
-    "lat": 16.75,
-    "lng": 96.15,
+    "lat": 16.79,
+    "lng": 96.06,
     "status": "正在办理土地与基础设施规划批复，少量基础管线施工中；社会争议仍待化解"
   },
   {
@@ -86,8 +86,8 @@
     "desc": "<img src=\"/images/Kyaukpyu_digital_globe.jpg\" alt=\"皎漂港卫星图\" style=\"width:100%;margin-bottom:10px;border-radius:8px;\"><b>1. 概况与地理位置</b><br>皎漂港（Kyaukpyu Port）位于缅甸若开邦西南部，濒临孟加拉湾，是皎漂经济特区（Kyaukpyu SEZ）和中缅经济走廊（CMEC）的海上枢纽之一。该港旨在为中国云南省提供一条绕过马六甲海峡，直达印度洋的海陆联运通道，大大缩短沿海航线的时间和成本。<br><br><b>2. 基础设施与规划</b><ul><li><b>深水码头：</b>规划建设10个泊位，首期设计年集装箱吞吐量约490万标准箱（TEU），可扩展至700万TEU；散货年通过量预计达780万吨。</li><li><b>配套设施：</b>包括道路、高速铁路连接昆明方向的联运通道，以及油气管道项目（日输油管线和输气管线）的落脚点。</li><li><b>环境与社会影响评估（EIA/SIA）：</b>已进入审查阶段，重点关注当地渔业、生计和生态环境影响。</li></ul><br><b>3. 投资与建设进度</b><ul><li><b>主导方：</b>由中国中信集团（CITIC）与缅甸政府合资成立的“中信缅甸港口投资有限公司”负责建设与运营。</li><li><b>近期会议：</b>2025年3月，中信高层与缅甸军政府官员在内比都召开协调会，商讨加速项目落实的先决条件；同月，军政府继续推进该港口工程，即便若开邦部分区域仍处于亚拉干军（Arakan Army）武装冲突中。</li><li><b>资金规模：</b>整体投资预估约73亿美元，分阶段实施，首期工程已于2024年初重启谈判并签署加速协议。</li></ul><br><b>4. 战略意义</b><ul><li><b>能源安全：</b>皎漂港与管道项目可将中东、非洲等地区的石油天然气，经过缅甸直接输往中国西南，为中国提供替代马六甲海峡的能源安全通道。</li><li><b>区域联动：</b>作为“一带一路”倡议和中缅经济走廊的重要节点，皎漂港将促进缅甸若开邦的经济发展，带动沿线基础设施和产业集聚。</li></ul><br><b>5. 挑战与风险</b><ul><li><b>安全风险：</b>若开邦的武装冲突尚未完全平息，局部地区仍有安全隐患，可能影响施工进度及运营安全。</li><li><b>社会影响：</b>当地渔业和传统生计面临冲击，当地社区呼吁提供再就业和技能培训，以缓解因港口建设带来的生计转型压力。</li><li><b>环境风险：</b>深水港和联运管道建设可能对沿海生态系统造成扰动，EIA/SIA结果仍需公开透明，确保环境与社会可持续发展。</li></ul><br><b>6. 未来展望</b><ul><li><b>项目推进：</b>在中缅双方的持续协调下，预计2025–2026年进入主航道疏浚和首批泊位建设阶段；随后逐步投产集装箱和散货业务。</li><li><b>区域影响：</b>皎漂港投产后，有望成为缅甸西部最重要的国际港口，带动若开邦基础设施升级、物流产业链完善，并进一步稳固中缅经济合作的战略纽带。</li></ul>",
     "sign_time": "2009年12月：签署合作备忘录；2015年12月30日：中标；2018年11月8日：签署框架协议；2020年1月18日：股东协议和特许协议文本交换。",
     "location": "缅甸若开邦皎漂经济特区",
-    "lat": 19.36,
-    "lng": 93.58,
+    "lat": 19.21,
+    "lng": 93.41,
     "status": "停工"
   },
   {
@@ -113,8 +113,17 @@
     "desc": "从缅甸皎漂港至中国云南的原油和天然气管道，设计为第四大能源进口通道，绕过马六甲海峡以保障能源安全。",
     "sign_time": "2009年12月：签署权利与义务协议；2010年6月：开工建设；2013年5月30日：全线贯通。",
     "location": "缅甸若开邦、马圭省、曼德勒省和掸邦，从云南瑞丽进入中国",
-    "lat": 20.45,
-    "lng": 93.55,
+    "lat": 19.39,
+    "lng": 93.91,
+    "status": "投产"
+  },
+  {
+    "name": "曼德勒密铁拉1吉瓦光伏发电基地",
+    "desc": "2025年1月11日，中国能建中电工程云南院与缅甸Gold Energy(金色能源)公司在缅甸仰光签署了缅甸曼德勒密铁拉1吉瓦光伏发电基地技术服务合同。",
+    "sign_time": "2009年12月：签署权利与义务协议；2010年6月：开工建设；2013年5月30日：全线贯通。",
+    "location": "缅甸若开邦、马圭省、曼德勒省和掸邦，从云南瑞丽进入中国",
+    "lat": 20.53,
+    "lng": 95.53,
     "status": "投产"
   }
 ] 
