百分比定位，毛玻璃颜色

--- a/big-screen/src/lib/china_myanmar_projects.json
+++ b/big-screen/src/lib/china_myanmar_projects.json
@@ -82,7 +82,7 @@
     "status": "停工"
   },
   {
-    "name": "皎漂深水港",
+    "name": "皎漂深水港+工业园区",
     "desc": "<img src=\"/images/Kyaukpyu_digital_globe.jpg\" alt=\"皎漂港卫星图\" style=\"width:100%;margin-bottom:10px;border-radius:8px;\"><b>1. 概况与地理位置</b><br>皎漂港（Kyaukpyu Port）位于缅甸若开邦西南部，濒临孟加拉湾，是皎漂经济特区（Kyaukpyu SEZ）和中缅经济走廊（CMEC）的海上枢纽之一。该港旨在为中国云南省提供一条绕过马六甲海峡，直达印度洋的海陆联运通道，大大缩短沿海航线的时间和成本。<br><br><b>2. 基础设施与规划</b><ul><li><b>深水码头：</b>规划建设10个泊位，首期设计年集装箱吞吐量约490万标准箱（TEU），可扩展至700万TEU；散货年通过量预计达780万吨。</li><li><b>配套设施：</b>包括道路、高速铁路连接昆明方向的联运通道，以及油气管道项目（日输油管线和输气管线）的落脚点。</li><li><b>环境与社会影响评估（EIA/SIA）：</b>已进入审查阶段，重点关注当地渔业、生计和生态环境影响。</li></ul><br><b>3. 投资与建设进度</b><ul><li><b>主导方：</b>由中国中信集团（CITIC）与缅甸政府合资成立的“中信缅甸港口投资有限公司”负责建设与运营。</li><li><b>近期会议：</b>2025年3月，中信高层与缅甸军政府官员在内比都召开协调会，商讨加速项目落实的先决条件；同月，军政府继续推进该港口工程，即便若开邦部分区域仍处于亚拉干军（Arakan Army）武装冲突中。</li><li><b>资金规模：</b>整体投资预估约73亿美元，分阶段实施，首期工程已于2024年初重启谈判并签署加速协议。</li></ul><br><b>4. 战略意义</b><ul><li><b>能源安全：</b>皎漂港与管道项目可将中东、非洲等地区的石油天然气，经过缅甸直接输往中国西南，为中国提供替代马六甲海峡的能源安全通道。</li><li><b>区域联动：</b>作为“一带一路”倡议和中缅经济走廊的重要节点，皎漂港将促进缅甸若开邦的经济发展，带动沿线基础设施和产业集聚。</li></ul><br><b>5. 挑战与风险</b><ul><li><b>安全风险：</b>若开邦的武装冲突尚未完全平息，局部地区仍有安全隐患，可能影响施工进度及运营安全。</li><li><b>社会影响：</b>当地渔业和传统生计面临冲击，当地社区呼吁提供再就业和技能培训，以缓解因港口建设带来的生计转型压力。</li><li><b>环境风险：</b>深水港和联运管道建设可能对沿海生态系统造成扰动，EIA/SIA结果仍需公开透明，确保环境与社会可持续发展。</li></ul><br><b>6. 未来展望</b><ul><li><b>项目推进：</b>在中缅双方的持续协调下，预计2025–2026年进入主航道疏浚和首批泊位建设阶段；随后逐步投产集装箱和散货业务。</li><li><b>区域影响：</b>皎漂港投产后，有望成为缅甸西部最重要的国际港口，带动若开邦基础设施升级、物流产业链完善，并进一步稳固中缅经济合作的战略纽带。</li></ul>",
     "sign_time": "2009年12月：签署合作备忘录；2015年12月30日：中标；2018年11月8日：签署框架协议；2020年1月18日：股东协议和特许协议文本交换。",
     "location": "缅甸若开邦皎漂经济特区",
