AI悬浮球适应大屏，缅甸地图武装，右侧NGO

--- a/big-screen/src/lib/china_myanmar_projects.json
+++ b/big-screen/src/lib/china_myanmar_projects.json
@@ -1,89 +1,43 @@
 [
   {
-    "name": "中缅原油与天然气管道",
-    "desc": "“一油一气”并行管道，自若开（Kyaukphyu）经缅甸中部至中国云南昆明，是“一带一路”中国‑缅甸经济走廊核心能源通道。",
+    "name": "中缅油气管道项目",
+    "desc": "<b>1. 项目概况</b><br>中缅油气管道是连接中国西南地区和缅甸的原油及天然气输送管道。全长793公里，起点为若开邦皎漂，设有6座站场工艺设备，在缅甸境内途经若开邦、马圭省、曼德勒省、掸邦，经南坎进入中国瑞丽。<br><br><b>2. 建设历程</b><br>2013年7月28日，中缅天然气管道开始向中国输气。2017年，中缅原油管道启用。<br><br><b>3. 管道规模</b><ul><li><b>中缅原油管道：</b>在缅甸境内段长771公里，在中国境内段干线长1631公里</li><li><b>中缅天然气管道：</b>在缅甸境内段长793公里，在中国境内段干线长1727公里</li></ul><br><b>4. 路线走向</b><br>两条管道的起点均为缅甸皎漂，自云南省瑞丽市进入中国。进入中国后，中缅油气管道在贵州省安顺市实现油气管道分离，其中输油管道经贵州省到达重庆市，输气管道经贵州省到达广西壮族自治区。<br><br><b>5. 工程特点</b><ul><li><b>中国境内段：</b>途经4个省区市、23个地级市、73个县市，在56处穿越或跨越大中型河流，有76处山体隧道</li><li><b>缅甸境内段：</b>起点为缅甸若开邦皎漂的马德岛，经皎漂、曼德勒到达中缅边境，穿越马德岛的两条海沟，翻越若开山，穿越或跨越伊洛瓦底江、米坦格河等多条大中型河流</li><li><b>重要设施：</b>在曼德勒设有曼德勒输油站和天然气分输站</li></ul>",
     "sign_time": "2005年12月：CNPC与缅方达成天然气30年购气MoU；2008年12月：中方签署油管建设协议；2009年6月：天然气、原油管道合同签署。",
-    "location": "若开岛（Ramree Island）",
-    "lat": 21.36,
-    "lng": 93.58,
+    "location": "若开邦皎漂至中国瑞丽",
+    "lat": 19.36,
+    "lng": 93.68,
     "status": "天然气管线2013年10月投入运营，原油管线2017年6月投产，持续向中国输送能源"
   },
   {
-    "name": "若开经济特区",
-    "desc": "占地1 600 ha，由中缅政府发起的综合产业园区，含港口、工业区等，连通若开油气终端，是BRI缅甸段旗舰。",
-    "sign_time": "2013年9月：SEZ构想首次提出；2014年5月26日：在内比都签署总体规划及招标管理协议。",
-    "location": "若开镇, 若开省",
-    "lat": 19.41,
-    "lng": 94.55,
-    "status": "仍在征地与基础设施开发中，重点推进工业园区与配套管廊建设"
+    "name": "密松水电站",
+    "desc": "<b>1. 项目概况</b><br>密松水电站是缅甸伊洛瓦底江干流上一座停建中的水力发电厂和大堤坝，坝址位于迈立开江与恩梅开江汇合处的下游7千米处，密支那以北37千米处。<br><br><b>2. 建设方</b><br>由缅甸政府合同商'AsiaWorld'、缅甸电力部、中国电力投资集团承建。<br><br><b>3. 电力输出</b><br>水电站启用后产生的电力的90%将会输出到中国。",
+    "sign_time": "项目已停建",
+    "location": "迈立开江与恩梅开江汇合处下游7千米处",
+    "lat": 25.69,
+    "lng": 97.52,
+    "status": "停建"
   },
   {
-    "name": "若开深水港",
-    "desc": "SEZ下属深水港项目，由中信集团（70%）与缅方（30%）合资建设，可停靠万吨级货轮，缩短中国经海上进口中东原油路线。",
-    "sign_time": "2014年1月13日：成立管理委员会；2015年12月30日：中信联合体中标；2018年11月8日：签署框架协议。",
-    "location": "若开统辖的马代岛（Maday Island）",
-    "lat": 18.36,
-    "lng": 93.58,
-    "status": "港区填海与码头桩基施工进行中，一期预计2025年完工",
-    "img": "/images/ruokaiport.jpg"
-  },
-  {
-    "name": "耶瓦水电站",
-    "desc": "枢纽在缅甸中部密支那河上，由中国国际信托投资公司（CITIC）与中水电联合承建，装机容量≈790MW。",
-    "sign_time": "2001年末：双方签署MoU；2005年9月2日：CITIC下属企业与缅方签正式合同；",
-    "location": "曼德勒地区耶瓦镇",
-    "lat": 21.99,
-    "lng": 97.12,
-    "status": "四台机组均已于2010–2011年间投运，全面商业运行中"
-  },
-  {
-    "name": "哈吉水电站",
-    "desc": "计划在萨尔温江上修建重力坝，装机≈1 365 MW，由中方水电企业与泰方、缅方合资。因环境与社会影响争议，项目长期停滞未开工。",
-    "sign_time": "2007年4月：中国发改委批准；2009年6月：缅方签署建设协议。",
-    "location": "克伦邦哈吉地区",
-    "lat": 16.19,
-    "lng": 98.66,
-    "status": "环境评估与地方冲突尚未解决，工程仍处“拟建”阶段"
-  },
-  {
-    "name": "勐稽水电三级联产",
-    "desc": "分布于掸邦西部施威河（Shweli River）上的I/II/III级梯级电站，总装机≈1 420 MW，主体由云南联合电力公司（YUPD）按BOT模式建设。",
-    "sign_time": "2004年2月：Shweli I勘测与前期；2006年8月：BOT协议签署。",
-    "location": "掸邦南部南加木至南玛段",
-    "lat": 22.96,
-    "lng": 95.93,
-    "status": "I级2009年竣工投运，II/III级相继完工，整体并网发电中"
+    "name": "曼德勒产业新城基础设施工程",
+    "desc": "<b>1. 项目概况</b><br>2019年，中铁国际与缅甸中央伊洛瓦底公司签署了《关于缅甸曼德勒产业新城基础设施工程的设计、采购及建造合同协议》，负责曼德勒产业新城的道路工程、给排水工程、污水处理工程、电力、通信和消防管线工程等多项基础设施工程。<br><br><b>2. 项目规模</b><br>项目工期为90个月，签约金额约33.55亿元人民币。曼德勒产业新城是缅甸首个国际水准的大型绿色智慧产业新城，占地约4046公顷。<br><br><b>3. 发展定位</b><br>该项目以经济开发区和智慧城市为基础，通过建设工业园区、商业园区、农业开发区、旅游度假区、住宅及相关基础设施，发展制造、农业、IT、科技研发、健康医疗、教育、旅游休闲等产业，为本地和外国投资者创造投资机会。",
+    "sign_time": "2019年：中铁国际与缅甸中央伊洛瓦底公司签署合同协议",
+    "location": "曼德勒产业新城",
+    "lat": 21.71,
+    "lng": 95.63,
+    "status": "建设中"
   },
   {
     "name": "缅甸仰光新城开发项目",
-    "desc": "缅甸仰光省政府于2018年3月31日宣布成立仰光新城开发公司，通过建设仰光新城提振当地经济。仰光新城开发公司为仰光省政府百分之百所有，中国交建将主要基于公私合作模式运营，由董事会成员管理。拟建区域占地4745公顷，位于Hlaingthaya - Twante高速公路与Seikkyi Kanaungto镇区之间。",
+    "desc": "<b>1. 项目概况</b><br>缅甸仰光省政府于2018年3月31日宣布成立仰光新城开发公司，通过建设仰光新城提振当地经济。<br><br><b>2. 运营模式</b><br>仰光新城开发公司为仰光省政府百分之百所有，中国交建将主要基于公私合作模式运营，由董事会成员管理。<br><br><b>3. 项目规模</b><br>拟建区域占地4745公顷，位于Hlaingthaya - Twante高速公路与Seikkyi Kanaungto镇区之间。",
     "sign_time": "2018年3月1日：缅方成立开发公司；2018年4月：与CCCC签署1.5亿美元框架协议。",
     "location": "仰光西岸（Yangon Region）",
     "lat": 16.79,
-    "lng": 96.06,
+    "lng": 96.07,
     "status": "正在办理土地与基础设施规划批复，少量基础管线施工中；社会争议仍待化解"
   },
   {
-    "name": "中缅铁路",
-    "desc": "<img src=\"/images/china_myanmar_railway.jpg\" alt=\"中缅铁路示意图\" style=\"width:100%;margin-bottom:10px;border-radius:8px;\"><b>1. 项目概况与战略意义</b><br>中缅铁路（China–Myanmar Railway，CMR）是“一带一路”与中缅经济走廊（CMEC）的旗舰基础设施，规划连接中国云南省昆明，经瑞丽—木姐（Muse）、曼德勒（Mandalay），最终抵达若开邦皎漂（Kyaukphyu）印度洋深水港，全长逾1,000 公里。该线路将为中国提供绕越马六甲海峡的陆海联运通道，提升能源和贸易安全，深化区域互联互通。<br><br><b>2. 路线与分期建设</b><ul><li><b>第一阶段（中方段）：</b>昆明至瑞丽（Dali–Ruili段）已于2022年开通至保山，并计划2027年前完成至瑞丽，具备接入缅甸网络的条件。</li><li><b>第二阶段（缅甸段）：</b>缅方段分为两部分：<ul><li><b>木姐（Muse）—曼德勒（Mandalay）段</b>，长约401 公里，预计于2025年动工，前期仍在进行深入的地质与可行性调查；</li><li><b>曼德勒—皎漂（Kyaukphyu）段</b>，尚未确立开工时间表，同样需完成环境与社会影响评估（EIA/SIA）和线路勘测。</li></ul></li></ul><br><b>3. 进度与最新动态</b><ul><li>2025年6月，中缅两国领导人在北京会晤，强调加快CMEC框架下基础设施互联互通，明确推动中缅铁路“加速落地”。</li><li>缅甸交通部官员近日表示，Muse—Mandalay段测量工作已接近尾声，预计年内完成全部勘测报告，正式破土将在2025年内启动；曼—皎段尚待缅甸国内审批及跨国协调。</li></ul><br><b>4. 投资主体与融资</b><ul><li><b>主导方：</b>中方由中国铁路二院等央企组成的项目组参与，可研与工程设计；缅方由国家铁路局（Myanma Railways）配合。</li><li><b>资金来源：</b>项目总投资预计在150–200亿美元之间，中方或通过政府间贷款与商业银行融资相结合的方式铺开；缅方承担配套道路、站场及地方配合费用。</li></ul><br><b>5. 主要挑战与风险</b><ul><li><b>安全形势：</b>自2021年缅甸政变后，若开邦及掸邦局部地区武装冲突频发，可能对施工安全与供应链物流造成干扰。</li><li><b>环境与社会影响：</b>沿线山区与湿地生态脆弱，本地社区担忧生计转型与生态破坏，需严格落实EIA/SIA公开及补偿机制。</li><li><b>融资与审批：</b>缅甸国内政治经济不确定性增加，导致跨国贷款审批节奏有所放缓，需持续对接多边开发机构与中资银团。</li></ul><br><b>6. 未来展望</b><ul><li><b>2025–2026年：</b>完成Muse—Mandalay段施工启动与首批工程包招标；</li><li><b>2027–2029年：</b>实现中缅跨境通道打通，先行投入货运及联运；</li><li><b>2030年及以后：</b>全线投入运营，将昆明—皎漂陆海联运时间缩短至3 天内，显著提升区域贸易与能源安全。</li></ul>",
-    "sign_time": "2011年：初始协议签署；2018年10月22日：签署木姐—曼德勒段可行性研究备忘录；2022年7月22日：大理至保山段开通。",
-    "location": "中国云南省昆明市——缅甸仰光",
-    "lat": 23.00,
-    "lng": 98.50,
-    "status": "停工"
-  },
-  {
-    "name": "蒙育瓦铜矿项目",
-    "desc": "位于缅甸实皆省的铜矿项目，包括莱比塘等分矿，是亚洲最大湿法炼铜工程，设计年产能10万吨阴极铜。",
-    "sign_time": "2010年：项目启动；2012年3月：莱比塘铜矿奠基；2012年12月：成立调查委员会。",
-    "location": "缅甸西北部实皆省南部蒙育瓦县钦敦江边的萨林基乡",
-    "lat": 22.10,
-    "lng": 95.00,
-    "status": "停工"
-  },
-  {
     "name": "皎漂深水港+工业园区",
-    "desc": "<img src=\"/images/Kyaukpyu_digital_globe.jpg\" alt=\"皎漂港卫星图\" style=\"width:100%;margin-bottom:10px;border-radius:8px;\"><b>1. 概况与地理位置</b><br>皎漂港（Kyaukpyu Port）位于缅甸若开邦西南部，濒临孟加拉湾，是皎漂经济特区（Kyaukpyu SEZ）和中缅经济走廊（CMEC）的海上枢纽之一。该港旨在为中国云南省提供一条绕过马六甲海峡，直达印度洋的海陆联运通道，大大缩短沿海航线的时间和成本。<br><br><b>2. 基础设施与规划</b><ul><li><b>深水码头：</b>规划建设10个泊位，首期设计年集装箱吞吐量约490万标准箱（TEU），可扩展至700万TEU；散货年通过量预计达780万吨。</li><li><b>配套设施：</b>包括道路、高速铁路连接昆明方向的联运通道，以及油气管道项目（日输油管线和输气管线）的落脚点。</li><li><b>环境与社会影响评估（EIA/SIA）：</b>已进入审查阶段，重点关注当地渔业、生计和生态环境影响。</li></ul><br><b>3. 投资与建设进度</b><ul><li><b>主导方：</b>由中国中信集团（CITIC）与缅甸政府合资成立的“中信缅甸港口投资有限公司”负责建设与运营。</li><li><b>近期会议：</b>2025年3月，中信高层与缅甸军政府官员在内比都召开协调会，商讨加速项目落实的先决条件；同月，军政府继续推进该港口工程，即便若开邦部分区域仍处于亚拉干军（Arakan Army）武装冲突中。</li><li><b>资金规模：</b>整体投资预估约73亿美元，分阶段实施，首期工程已于2024年初重启谈判并签署加速协议。</li></ul><br><b>4. 战略意义</b><ul><li><b>能源安全：</b>皎漂港与管道项目可将中东、非洲等地区的石油天然气，经过缅甸直接输往中国西南，为中国提供替代马六甲海峡的能源安全通道。</li><li><b>区域联动：</b>作为“一带一路”倡议和中缅经济走廊的重要节点，皎漂港将促进缅甸若开邦的经济发展，带动沿线基础设施和产业集聚。</li></ul><br><b>5. 挑战与风险</b><ul><li><b>安全风险：</b>若开邦的武装冲突尚未完全平息，局部地区仍有安全隐患，可能影响施工进度及运营安全。</li><li><b>社会影响：</b>当地渔业和传统生计面临冲击，当地社区呼吁提供再就业和技能培训，以缓解因港口建设带来的生计转型压力。</li><li><b>环境风险：</b>深水港和联运管道建设可能对沿海生态系统造成扰动，EIA/SIA结果仍需公开透明，确保环境与社会可持续发展。</li></ul><br><b>6. 未来展望</b><ul><li><b>项目推进：</b>在中缅双方的持续协调下，预计2025–2026年进入主航道疏浚和首批泊位建设阶段；随后逐步投产集装箱和散货业务。</li><li><b>区域影响：</b>皎漂港投产后，有望成为缅甸西部最重要的国际港口，带动若开邦基础设施升级、物流产业链完善，并进一步稳固中缅经济合作的战略纽带。</li></ul>",
+    "desc": "<img src=\"/images/Kyaukpyu_digital_globe.jpg\" alt=\"皎漂港卫星图\" style=\"width:100%;margin-bottom:10px;border-radius:8px;\"><b>1. 概况与地理位置</b><br>皎漂港（Kyaukpyu Port）位于缅甸若开邦西南部，濒临孟加拉湾，是皎漂经济特区（Kyaukpyu SEZ）和中缅经济走廊（CMEC）的海上枢纽之一。该港旨在为中国云南省提供一条绕过马六甲海峡，直达印度洋的海陆联运通道，大大缩短沿海航线的时间和成本。<br><br><b>2. 基础设施与规划</b><ul><li><b>深水码头：</b>规划建设10个泊位，首期设计年集装箱吞吐量约490万标准箱（TEU），可扩展至700万TEU；散货年通过量预计达780万吨。</li><li><b>配套设施：</b>包括道路、高速铁路连接昆明方向的联运通道，以及油气管道项目（日输油管线和输气管线）的落脚点。</li><li><b>环境与社会影响评估（EIA/SIA）：</b>已进入审查阶段，重点关注当地渔业、生计和生态环境影响。</li></ul><br><b>3. 投资与建设进度</b><ul><li><b>主导方：</b>由中国中信集团（CITIC）与缅甸政府合资成立的'中信缅甸港口投资有限公司'负责建设与运营。</li><li><b>近期会议：</b>2025年3月，中信高层与缅甸军政府官员在内比都召开协调会，商讨加速项目落实的先决条件；同月，军政府继续推进该港口工程，即便若开邦部分区域仍处于亚拉干军（Arakan Army）武装冲突中。</li><li><b>资金规模：</b>整体投资预估约73亿美元，分阶段实施，首期工程已于2024年初重启谈判并签署加速协议。</li></ul><br><b>4. 战略意义</b><ul><li><b>能源安全：</b>皎漂港与管道项目可将中东、非洲等地区的石油天然气，经过缅甸直接输往中国西南，为中国提供替代马六甲海峡的能源安全通道。</li><li><b>区域联动：</b>作为'一带一路'倡议和中缅经济走廊的重要节点，皎漂港将促进缅甸若开邦的经济发展，带动沿线基础设施和产业集聚。</li></ul><br><b>5. 挑战与风险</b><ul><li><b>安全风险：</b>若开邦的武装冲突尚未完全平息，局部地区仍有安全隐患，可能影响施工进度及运营安全。</li><li><b>社会影响：</b>当地渔业和传统生计面临冲击，当地社区呼吁提供再就业和技能培训，以缓解因港口建设带来的生计转型压力。</li><li><b>环境风险：</b>深水港和联运管道建设可能对沿海生态系统造成扰动，EIA/SIA结果仍需公开透明，确保环境与社会可持续发展。</li></ul><br><b>6. 未来展望</b><ul><li><b>项目推进：</b>在中缅双方的持续协调下，预计2025–2026年进入主航道疏浚和首批泊位建设阶段；随后逐步投产集装箱和散货业务。</li><li><b>区域影响：</b>皎漂港投产后，有望成为缅甸西部最重要的国际港口，带动若开邦基础设施升级、物流产业链完善，并进一步稳固中缅经济合作的战略纽带。</li></ul>",
     "sign_time": "2009年12月：签署合作备忘录；2015年12月30日：中标；2018年11月8日：签署框架协议；2020年1月18日：股东协议和特许协议文本交换。",
     "location": "缅甸若开邦皎漂经济特区",
     "lat": 19.21,
@@ -91,39 +45,12 @@
     "status": "停工"
   },
   {
-    "name": "皎漂燃气电站",
-    "desc": "位于缅甸若开邦皎漂市的燃气电站，装机容量13.5万千瓦，由中缅合作开发，旨在支持当地能源供应。",
-    "sign_time": "2019年11月5日：购电协议签约；2022年3月20日：进入调试阶段。",
-    "location": "缅甸若开邦皎漂市",
-    "lat": 20.45,
-    "lng": 93.55,
-    "status": "投产"
-  },
-  {
-    "name": "瑞丽江水电站",
-    "desc": "位于缅甸掸邦瑞丽江的水电站项目，采用BOT模式运作，包括一级、二级和三级电站，总装机容量142万千瓦。",
-    "sign_time": "2006年：项目启动；2009年11月12日：签署二级项目开发权谅解备忘录。",
-    "location": "缅甸掸邦南坎县境内",
-    "lat": 24.00,
-    "lng": 97.80,
-    "status": "投产"
-  },
-  {
-    "name": "中缅油气管道",
-    "desc": "从缅甸皎漂港至中国云南的原油和天然气管道，设计为第四大能源进口通道，绕过马六甲海峡以保障能源安全。",
-    "sign_time": "2009年12月：签署权利与义务协议；2010年6月：开工建设；2013年5月30日：全线贯通。",
-    "location": "缅甸若开邦、马圭省、曼德勒省和掸邦，从云南瑞丽进入中国",
-    "lat": 19.39,
-    "lng": 93.91,
-    "status": "投产"
-  },
-  {
     "name": "曼德勒密铁拉1吉瓦光伏发电基地",
-    "desc": "2025年1月11日，中国能建中电工程云南院与缅甸Gold Energy(金色能源)公司在缅甸仰光签署了缅甸曼德勒密铁拉1吉瓦光伏发电基地技术服务合同。",
-    "sign_time": "2009年12月：签署权利与义务协议；2010年6月：开工建设；2013年5月30日：全线贯通。",
-    "location": "缅甸若开邦、马圭省、曼德勒省和掸邦，从云南瑞丽进入中国",
-    "lat": 20.53,
-    "lng": 95.53,
-    "status": "投产"
+    "desc": "<b>1. 项目概况</b><br>2025年1月11日，中国能建中电工程云南院与缅甸Gold Energy(金色能源)公司在缅甸仰光签署了缅甸曼德勒密铁拉1吉瓦光伏发电基地技术服务合同。",
+    "sign_time": "2025年1月11日：中国能建中电工程云南院与缅甸Gold Energy公司签署技术服务合同",
+    "location": "曼德勒密铁拉",
+    "lat": 20.88,
+    "lng": 95.88,
+    "status": "签约"
   }
-] 
+]
